src/test/deca/context/valid/return/return_boolean_simple.deca
// Description :
//    Méthode retournant un booléen.
//
// Resultats :
//    OK

class A {
    boolean f() {
        return true;
    }
}

{
    A a = new A();
    println(a.f());
}

