src/test/deca/context/invalid/return/return_boolean_in_float_custom.deca
// Description :
// return boolean dans méthode float
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : type de retour incompatible

class P {
    float f() {
        return true;
    }
}
